# bachelorarbeit_impl

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-06eeb9e9a4f7cef64a4698b27186885887ccd39e93c59ed87cbd79f1106a645e.json  query-20996ee06e84d77e2acee433eb72c8b437a6fb57f218fa89f66322bd725f46b0.json  query-4fc8e92d770dd71cf185fa3bebeb17c0913caa8e97b3b196d48ed366f4ead931.json  query-52cd182b1068196d1d9a9333468504110eac8d6b237ac8a5239ada4673870d40.json  query-5fac08cf1ff3c50ac5e94564bf4e9a14b115d5ae86eed8d5c76468f56e413f3a.json  query-7de01823429a07b43d910a23e40ce9c321af447f983a6627332207c9891b5390.json  query-89ba9bfc328663f51086831cf02d7ca7fd8164365cf21242d40aef144df6bddb.json  query-8af1ed40106df7d39a5806050c60f0d0395147a2e018f4f17d61c4174696b229.json  query-e2446ffa37b301ac4ff41509715a52b1ff38b2e677f1b50b9bfa78fad4126136.json
load-tests/: docker_monitor_java.sh  docker_monitor_rust.sh  k6_report_java_load.html  k6_report_java_stress.html  k6_report_rust_load.html  k6_report_rust_stress.html  script.js  script_java.js  script_java_load.js  script_rust_load.js
migrations/: 20241219160133_create_orders.up.sql  20241219160411_create_metadata.down.sql  20241219160411_create_metadata.up.sql  20241219160527_create_order_items.up.sql  20241219160811_create_metadata.up.sql
src/lib/: lib.rs
src/lib/domain/: models.rs  ports.rs  services.rs
src/lib/domain/models/: metadata.rs  order.rs  order_details.rs  order_item.rs
src/lib/domain/ports/: checkout_producer.rs  order_repository.rs  order_service.rs  payment_service.rs
src/lib/domain/services/: order_service.rs  payment_service.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs  responses.rs
src/lib/inbound/http/authorization/: keycloak.rs
src/lib/inbound/http/extractors/: auth.rs
src/lib/inbound/http/handlers/: cancel.rs  create_checkout.rs  delete_all_orders.rs  delete_by_id.rs  general.rs  get_all_orders_for_user.rs  get_by_id.rs  success.rs
src/lib/outbound/: mod.rs  postgres.rs  rabbitmq.rs
src/lib/outbound/entities/: metadata.rs  mod.rs  order.rs  order_details.rs  order_item.rs  session_status.rs
tests/: repository_tests.rs
